openshift/06-wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress

spec:
  selector:
    app: wordpress

  ports:
    - port: 80
      targetPort: 80
