openshift/07-wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress

spec:
  to:
    kind: Service
    name: wordpress

  port:
    targetPort: 8080
